--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/ShangHai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://roffy.me
+url: https://imjad.cn
 root: /
 permalink: archives/:category/:urlname/
 permalink_defaults:
@@ -61,7 +61,7 @@ index_generator:
   order_by: -date
 
 # Category & Tag
-default_category: uncategorized
+default_category: none
 category_map:
 tag_map:
 
