--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0",
-    "hexo-tag-cplayer": "^1.0.0"
+    "hexo-server": "^1.0.0"
   }
 }
