--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0"
+  },
+  "devDependencies": {
+    "cson": "^6.9.0",
+    "isomorphic-fetch": "^2.2.1",
+    "js-yaml": "^3.13.1",
+    "utility": "^1.16.3"
   }
 }
