--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/ShangHai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://imjad.cn
+url: https://nocilol.me
 root: /
 permalink: archives/:category/:urlname/
 permalink_defaults:
