博客更名为 恶魔萝莉控

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 猫与向日葵
+title: 恶魔萝莉控
 subtitle: ''
 description: '浊以静之徐清，安以动之徐生'
 keywords: ’‘
