--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ prism_plugin:
   custom_css: 'css/prism-theme.css'
 
 live2d:
-  enable: true
+  enable: false
   scriptFrom: local
   pluginRootPath: live2dw/
   pluginJsPath: lib/
