--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 恶魔萝莉控
 subtitle: ''
 description: '浊以静之徐清，安以动之徐生'
-keywords: ’‘
+keywords: ''
 author: journey.ad
 language: zh-cn
 timezone: 'Asia/ShangHai'
